# segment_toy

./: Cargo.toml  README.md
deltafor/src/: bitpack.rs  envelope.rs
redpanda-adl/src/: de.rs  error.rs  lib.rs
redpanda-records/src/: batch.rs  lib.rs
src/: batch_reader.rs  bucket_reader.rs  fundamental.rs  main.rs  main_unstable.rs  ntp_mask.rs  remote_types.rs  repair.rs  segment_writer.rs  varint.rs
